# recoll

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  RELEASING.md  meson_options.txt  recoll.json
.github/workflows/: ci.yml  pages.yml  release.yml
aspell/: rclaspell.cpp
bincimapmime/: COPYING
bucket/: recoll.json
common/: cstr.h  plaintorich.cpp  rclutil.h  textsplit.cpp
crates/rn-bench/: Cargo.toml
crates/rn-cli/: Cargo.toml
crates/rn-core/: Cargo.toml
crates/rn-core/src/: config.rs  error.rs  extract.rs  lib.rs  lock.rs  repair.rs  search.rs  state.rs  task.rs  types.rs
crates/rn-core/tests/: config_default_test.rs  config_loader_test.rs  document_state_test.rs  error_types_test.rs  extract_result_test.rs  hot_reload_test.rs  index_task_test.rs  lock_test.rs  repair_test.rs  search_result_test.rs  shared_types_test.rs  task_priority_test.rs
crates/rn-extractors/: Cargo.toml
crates/rn-gpu/: Cargo.toml
crates/rn-gui/: Cargo.toml
crates/rn-indexer/: Cargo.toml
crates/rn-indexer/src/: commit_policy.rs  crawler.rs  lib.rs  normalize.rs  queue.rs  service.rs  throttle.rs
crates/rn-indexer/tests/: commit_policy_test.rs  crawler_test.rs  normalize_test.rs  queue_test.rs  service_test.rs  throttle_test.rs
crates/rn-installer/: Cargo.toml
crates/rn-meta/: Cargo.toml
crates/rn-meta/src/: models.rs  store.rs
crates/rn-meta/tests/: meta_store_test.rs
desktop/: recollindex.desktop
docs/: _config.yml  index.md  recoll-next-tdd.md  technical-design.md  todo.md
filters/: archivextract.py  cnsplitter.py  openxml-visio-body.xsl  openxml-word-body.xsl  rclaudio.py  rclchm.py  rclepub.py  rclexecm.py  rclimg.py  rclimgp.py  rclocrcache.py  rclorgmode.py  rclpst.py  rclrunsoffice.py  rcluncomp.py  rclwebarch.py
index/: mimetype.cpp  webqueue.cpp
installer/: recoll-1.43.14.iss  recoll.iss
internfile/: extrameta.cpp  mh_exec.cpp  mh_exec.h  mh_execm.h  mh_mail.h  mh_mbox.cpp  mh_text.cpp  mimehandler.h
qtgui/: CMakeLists.txt  advsearch_w.cpp  crontool.cpp  fragbuts.cpp  main.cpp  meson.build  preview.ui  preview_w.h  ptrans_w.cpp  rclm_idx.cpp  rclm_preview.cpp  rclm_wins.cpp  rclmain.ui  rclwebpage.h  recoll.pro.in  reslist.h  restable.h  rtitool.h  spell_w.cpp  ssearch_w.cpp  ssearch_w.h  uiprefs_w.cpp
query/: docseqdb.cpp  docseqhist.cpp  docseqhist.h  docseqsem.cpp  reslistpager.cpp  wasaparse.cpp  wasaparse.ypp
rcldb/: rclabsfromtext.cpp  rcldoc.h  rclndb.cpp  rclquery.cpp  rclquery.h  rclterms.cpp  searchdatatox.cpp
rclgrep/: meson.build  rclgrep.cpp
releases/: template.md  v1.43.13.md
sampleconf/: mimeview
semantic/: rclsem_common.py  rclsem_embed.py  rclsem_talk.py
src/: CMakeLists.txt  INSTALL  README  RECOLL-VERSION.txt  excludefile  manifest.txt  meson.build  meson_options.txt  setversion.sh
src/catch/: CMakeLists.txt  meson.build  test_base64.cpp  test_conftree.cpp  test_pathut.cpp  test_smallut.cpp  testmime.cpp
src/python/recoll/: pyproject.toml  pyrclextract.cpp  pyrecoll.cpp  pyrecoll.h  pyresultstore.cpp  setup-win.py  setup.py
src/python/recoll/recoll/: rclconfig.py
tests/: runtests.sh  shared.sh
unac/: CONTRIBUTORS-simdutf  COPYING  Makefile.am  Makefile.in  builder.in  configure.ac  unac.3  unac.c  unaccent.1  unaccent.c  unactest.c  unactest1.c
utils/: boolexp.cpp  cancelcheck.cpp  circache.cpp  mimeparse.cpp  pxattr.cpp  strmatcher.cpp
windows/: rclstartw.cpp  recoll-setup.iss  strptime.cpp  strptime.h  wincodepages.h
winget/: alarmz.Recoll.installer.yaml  alarmz.Recoll.locale.en-US.yaml  alarmz.Recoll.yaml
(+436 files in other folders)
