[package]
name = "rn-core"
version = "0.1.0"
edition = "2021"
description = "Recoll Next — core domain models, errors, and shared types"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
